--- a/miportafolio.html
+++ b/miportafolio.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>holi</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis error, id laboriosam dicta laudantium nostrum quis accusamus placeat vitae autem dolore consequuntur reiciendis tempora? Provident quibusdam repudiandae culpa saepe quam.</p>
+    <h2>como</h2>
+
 </body>
 </html>
