este es el primer commit

--- a/miportafolio.html
+++ b/miportafolio.html
@@ -9,6 +9,6 @@
 <body>
     <h1>holi</h1>
     <h2>como</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores sunt consequatur similique quo voluptatum ducimus, itaque animi! Rerum reprehenderit voluptatum minus, laudantium nulla repudiandae rem deleniti quis tempora, dolorem quaerat.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cumque nesciunt numquam. Dolore fugiat soluta iusto voluptatum labore, a blanditiis exercitationem ex recusandae nobis ad reiciendis? Aperiam aliquam deleniti ducimus?</p>
 </body>
 </html>
